# actix-blog-rs

./: Cargo.toml
src/: lib.rs  main.rs  startup.rs  state.rs
src/routes/: blogs.rs  health_check.rs  mod.rs
tests/: health_check.rs
