[package]
name = "actix-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = "0.4.24"
reqwest = "0.11.16"
serde = {version = "1.0.160", features = ["derive"]}

[lib]
path = "src/lib.rs"

[[bin]]
name = "actix_blog"
path = "src/main.rs"
